Создано с помощью Colaboratory

--- a/4_overfitting_regularization/overfitting_regularization.ipynb
+++ b/4_overfitting_regularization/overfitting_regularization.ipynb
@@ -282,7 +282,8 @@
           "start_time": "2022-02-16T07:39:33.479851Z"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "lQSsp2WDoA28",
         "outputId": "ed3ef9d9-8952-42cd-f11f-2b2de103b03a"
@@ -343,7 +344,8 @@
           "start_time": "2022-02-16T07:39:34.639540Z"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "GazB5DM4oA29",
         "outputId": "5d44af4a-c5b4-4418-ccaa-e729471b6a20"
@@ -562,7 +564,7 @@
         "scrolled": false,
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 2519
         },
         "id": "GR7M0TQOoA3A",
         "outputId": "3c98e43c-6e9f-48e3-b396-dfa88575059f"
@@ -790,7 +792,8 @@
           "start_time": "2021-12-15T20:32:47.308471Z"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "5UDBB4MaoA3C",
         "outputId": "83920d75-e49a-489d-e534-395760850a4e"
@@ -912,7 +915,8 @@
           "start_time": "2021-12-15T20:32:47.788153Z"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4mQ-n0tioA3E",
         "outputId": "f68a324d-3db1-415e-ac2c-32ff30f0fdaa"
@@ -1245,7 +1249,8 @@
           "start_time": "2021-12-15T20:32:51.234725Z"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "qj0bjGdBoA3J",
         "outputId": "d32767f9-8b2f-4f61-cfae-02ffac4c9c94"
@@ -2098,7 +2103,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ysNyJv-D_HIk",
         "outputId": "f68f541d-db72-49a2-fa56-3b7a19ffec40"
@@ -2165,7 +2171,8 @@
       "metadata": {
         "id": "EcZ0TiMxoA3V",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "014af01a-4346-4faf-f271-238693b5607a"
       },
@@ -2259,7 +2266,8 @@
       "metadata": {
         "id": "uuISDjRxoA3W",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "3807c4f4-bc35-4958-9ed0-36933f34550e"
       },
@@ -2303,7 +2311,8 @@
       "metadata": {
         "id": "ovrOoEdNoA3W",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b068165c-c584-4754-fb17-9c6df0b618d4"
       },
@@ -2356,7 +2365,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "sbfZNqLuEYjT",
         "outputId": "fdd9eece-fe2c-46da-89e6-5d4da8f425f7"
