Создано с помощью Colaboratory

--- a/4_overfitting_regularization/overfitting_regularization.ipynb
+++ b/4_overfitting_regularization/overfitting_regularization.ipynb
@@ -2960,16 +2960,7 @@
     "colab": {
       "name": "overfitting_regularization.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "DpO1bmD1oA2-",
-        "aYsSvF_0oA3A",
-        "0LjvhR8VoA3D",
-        "fqhD70bzoA3E",
-        "h_b3plj1oA3F",
-        "5H8M7WCKoA3G",
-        "KcS2QU0QoA3H",
-        "YICteNxFoA3H"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "widgets": {
