Создано с помощью Colaboratory

--- a/4_overfitting_regularization/overfitting_regularization.ipynb
+++ b/4_overfitting_regularization/overfitting_regularization.ipynb
@@ -12,6 +12,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# ***Комментарий к домашнему заданию***\n",
+        "\n",
+        "По какой то причине не отображаются выводы текстовых блоков. Прошу проверять через https://nbviewer.org/. Еще для облегчения расчетов в домашней работе используется разное количество признаков, в зависимости от задания. Каждый раз это в явном виде показывается какие признаки используются."
+      ],
+      "metadata": {
+        "id": "mjjZMIH2SKA0"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "RvjM-OnwoA2p"
       },
