Создано с помощью Colaboratory

--- a/7_trees_and_ensembles/rf_classifier.ipynb
+++ b/7_trees_and_ensembles/rf_classifier.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/N3wBaz/ml-intro/blob/main/7_trees_and_ensembles/rf_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "_b5ZSGm61aQS"
       },
       "source": [
@@ -3035,8 +3025,7 @@
     },
     "colab": {
       "name": "rf_classifier.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
