--- a/7_trees_and_ensembles/rf_classifier.ipynb
+++ b/7_trees_and_ensembles/rf_classifier.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/N3wBaz/ml-intro/blob/main/7_trees_and_ensembles/rf_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "_b5ZSGm61aQS"
       },
       "source": [
@@ -1738,15 +1748,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z6n3bhwM1aRb"
-      },
-      "source": [
-        "![grid_random_search.png](attachment:grid_random_search.png)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "ExecuteTime": {
           "end_time": "2022-01-17T10:10:45.984304Z",
           "start_time": "2022-01-17T10:10:45.969369Z"
@@ -3025,7 +3026,8 @@
     },
     "colab": {
       "name": "rf_classifier.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
